# dolist

./: README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: ci-main.yml  ci.yml
app/: .babelrc  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  jest.config.js  next.config.js  package-lock.json  package.json  routes.js  tailwind.config.js  tsconfig.json
app/public/scripts/: getTheme.js
app/src/api/: index.ts
app/src/components/: AddRepoModal.tsx  ColorThemeBtn.tsx  DayPlanView.tsx  GithubAuthBtn.tsx  HelloWorld.tsx  Layout.tsx  Loader.tsx  MonitoredRepoDetail.tsx  MonitoredRepoOverview.tsx  RepoCard.tsx  RepoOverview.tsx  TaskArea.tsx  TaskCard.tsx  index.ts
proxy/: nginx.conf  nginx_docker.conf  nginx_local.conf
scripts/: batch_logs.sh  compose-build.sh  docker-build.sh  init_db.sh  install-docker.sh  launch_proxy.sh
server/: .env.example  Dockerfile  README.md  pyproject.toml
server/src/: auth.py  config.py  dependency.py  helloworld.py  logger.py  main.py
server/src/app/domain/: mrepo.py
server/src/app/interactors/: auth.py  mrepo.py  user.py  webhook.py
server/src/auth/: github.py  jwt.py
server/src/domain/: auth.py  monitoredrepo.py  mrepo.py  user.py
server/src/framework/web/: helpers.py  main.py
server/src/infra/: db.py  model.py  userrepo.py
server/src/infra/auth/: github.py  jwt.py
server/src/infra/integration/: github.py
server/src/infra/pubsub/: pub.py
server/src/infra/storage/: mrepodb.py  userdb.py
server/src/integration/: github.py
server/src/pubsub/: pub.py  sqs.py
server/src/storage/: db.py  model.py  mrepodb.py  userdb.py  userrepo.py
server/tests/: mocks.py  test_example.py
server/tests/infra/auth/: test_github.py  test_jwt.py
server/tests/infra/integration/: test_int_github.py
server/tests/infra/pubsub/: test_pub.py
server/tests/infra/storage/: conftest.py  helpers.py  test_mrepodb.py  test_userdb.py
server/tests/integration/: test_gh_integration.py  test_github.py
server/tests/interactors/: conftest.py  test_mrepo.py
server/tests/interactors/auth/: conftest.py  test_auth.py
server/tests/storage/: conftest.py  helpers.py  test_mrepodb.py  test_userdb.py
src/: main.py
tests/: test_example.py
worker/: .dockerignore  .env.example  Dockerfile  pyproject.toml
worker/src/: __main__.py  config.py
worker/src/core/: definition.py  github.py
worker/src/helpers/: auth.py  logger.py
worker/src/pubsub/: pub.py  sqs.py  sub.py
worker/src/sub/: sqs.py
(+53 files in other folders)
