[tool.poetry]
name = "dolist-server"
version = "0.1.0"
description = ""
authors = ["Yunjae <yunjae.oh.nl@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
requests = "^2.28.1"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.39"
PyJWT = "^2.4.0"
SQLAlchemy-Utils = "^0.38.3"
psycopg2-binary = "^2.9.3"
dolistparser = "^0.2.2"
boto3 = "^1.24.51"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
