[tool.poetry]
name = "worker"
version = "0.1.0"
description = "Parse worker"
authors = ["Yunjae Oh"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.20.0"
boto3 = "^1.24.51"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
