[tool.poetry]
name = "worker"
version = "0.1.0"
description = "ParseWorker"
authors = ["Yunjae Oh"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
boto3 = "^1.24.51"
dolistparser = "^0.2.2"
requests = "^2.28.1"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
